--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "locator-micro",
     "description": "Micro template compiler for locator",
-    "version": "0.0.1",
+    "version": "0.1.0",
     "author": "Caridy Patino <caridy@yahoo-inc.com> (http://github.com/caridy)",
     "contributors": [],
     "dependencies": {
@@ -20,20 +20,21 @@
         "lib": "./lib"
     },
     "engines": {
-        "node": ">0.8",
-        "npm": ">1.0"
+        "node": ">=0.8.x",
+        "npm" : ">=1.2.10"
     },
-    "homepage": "yo/modown",
+    "homepage": "https://github.com/yahoo/locator-micro",
     "devDependencies": {
         "chai": "*",
         "istanbul": "*",
-        "jslint": "*",
+        "jshint": "~1.1.0",
+        "yui-lint": "~0.1.3",
         "mocha": "*",
         "mockery": "1.4.x",
         "xunit-file": "*"
     },
     "scripts": {
-        "lint": "node node_modules/.bin/jslint lib/*.js",
+        "lint": "node node_modules/.bin/jshint --config ./node_modules/yui-lint/jshint.json ./lib/*.js",
         "test": "node node_modules/.bin/_mocha tests/lib/*.js --reporter spec"
     },
     "license": "BSD"
