--- a/example/package.json
+++ b/example/package.json
@@ -6,9 +6,7 @@
     "main": "app.js",
     "devDependencies": {
         "express": "*",
-        "express-yui": "*",
-        "locator": "*",
-        "locator-micro": "*",
-        "yui": "~3.10.1"
+        "express-view": "*",
+        "locator": "*"
     }
 }
